test/files/neg/t7629-view-bounds-deprecation.check
t7629-view-bounds-deprecation.scala:2: warning: View bounds are deprecated. Use an implicit parameter instead.
Example: Instead of `def f[A <% Int](a: A)` use `def f[A](a: A)(implicit ev: A => Int)`.
  def f[A <% Int](a: A) = null
          ^
t7629-view-bounds-deprecation.scala:3: warning: View bounds are deprecated. Use an implicit parameter instead.
Example: Instead of `def f[A <% Int](a: A)` use `def f[A](a: A)(implicit ev: A => Int)`.
  def g[C, B <: C, A <% B : Numeric](a: A) = null
                     ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
